[gd_scene load_steps=6 format=3 uid="uid://cwr1u3nkk0l03"]

[ext_resource type="Script" uid="uid://dog2cfwltypvu" path="res://Script/opciones_menu.gd" id="1_u8svr"]
[ext_resource type="Texture2D" uid="uid://bhk63h1k0ru5n" path="res://Imagenes/Mobile - Geometry Dash - Miscellaneous - The Shop.png" id="2_dy0ni"]
[ext_resource type="Texture2D" uid="uid://bc0sttfe80pm1" path="res://Imagenes/sprites.png" id="3_tyspt"]

[sub_resource type="AtlasTexture" id="AtlasTexture_8raq0"]
atlas = ExtResource("2_dy0ni")
region = Rect2(0, 0, 948.7007, 629.9929)

[sub_resource type="AtlasTexture" id="AtlasTexture_2i2h2"]
atlas = ExtResource("3_tyspt")
region = Rect2(3471.5596, 2365.7603, 152.57153, 151.76563)

[node name="Opciones" type="CanvasLayer"]
process_mode = 3
script = ExtResource("1_u8svr")

[node name="TextureRect" type="TextureRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -9.0
offset_bottom = -1.0
grow_horizontal = 2
grow_vertical = 2
texture = SubResource("AtlasTexture_8raq0")

[node name="BtnVolver" type="Button" parent="TextureRect"]
layout_mode = 0
offset_left = 471.0
offset_top = 200.0
offset_right = 631.0
offset_bottom = 359.0
icon = SubResource("AtlasTexture_2i2h2")

[node name="HSlider" type="HSlider" parent="TextureRect"]
layout_mode = 0
offset_left = 103.0
offset_top = 521.0
offset_right = 1067.0
offset_bottom = 537.0
max_value = 1.0
step = 0.1
value = 0.5
tick_count = 6
ticks_on_borders = true

[connection signal="pressed" from="TextureRect/BtnVolver" to="." method="_on_btn_volver_pressed"]
[connection signal="value_changed" from="TextureRect/HSlider" to="." method="_on_h_slider_value_changed"]
